test/good/arrays/comprehension01.px

a = [for x in 1..5 yield x]
print a.length
print a[0], a[1], a[4]
