test/bad/arrays/comprehension10.px

[x for x in [0] if true, 1]
